--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <!DOCTYPE html>
   <html>
     <head>
+      <title>DAP | Project Localhost</title>
       <!--Import materialize.css-->
       <script language="javascript" type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
